[project]
name = "aicandidate"
version = "0.1.0"
description = ""
authors = [
    {name = "thanhthienle",email = "thienlt.7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "transformers (>=4.50.2,<5.0.0)",
    "datasets (>=3.4.1,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "vllm (>=0.8.2,<0.9.0)",
    "bitsandbytes (>=0.45.4,<0.46.0)",
    "peft (>=0.15.0,<0.16.0)",
    "unsloth (>=2025.3.19,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
